# newton

./: .gitignore  CMakeLists.txt  CMakeUserPresets.json  LICENSE  License.txt  README.md  SetupBuildEnv.bat  auraConfig.h.in  build.bat  build.sh  ccliConfig.h.in  conanfile.txt  newtonConfig.h.in  setting.nn
downloader/: downloader.cc
hello_wworld/: .gitignore  CMakeLists.txt  CMakeUserPresets.json  conanfile.txt  setting.nn
hello_wworld/src/: main.cc
hello_wworld/tests/: main.cc
src/: main.cc
src/classes/: newton.cxx
src/includes/: app.h  aura.hpp  ccli.hpp  colors.hpp  newton.hpp  version.hpp
src/includes/app/: app.cc
src/includes/aura/: aura.cc  aura.hpp
src/includes/constants/: constant.hpp
src/includes/downloader/: downloader.h
src/newton/: main.cc
src/root/: main.cc
src/source/: app.cc  aura.cc  ccli.cc  constant.hpp  newton.cc  version.cc
tests/: main.cc
updater/: main.cc
utool/: main.cc
